# icon_spin

./: Cargo.toml  README.md
shaders/: test_frgmt.glsl  test_vrtx.glsl
src/: main.rs
